Version 0.1.6 Added expanded component property Fixed border on Safari and iOS Safari Tweaked scrollbars appearance on text fields

--- a/src/component/components/ActionBlock/styles.module.scss
+++ b/src/component/components/ActionBlock/styles.module.scss
@@ -74,6 +74,12 @@ $retina: (
     box-shadow: inset 0.5px 0 #cccbcb, inset 0 0.5px #cccbcb,
       inset -0.5px 0 #cccbcb, inset 0 -0.5px #cccbcb,
       0 zoomed(4px) zoomed(20px) rgba(0, 0, 0, 0.05);
+
+    // Safari
+    &.safari {
+      border: 0.5px solid #cccbcb;
+      box-shadow: 0 zoomed(4px) zoomed(20px) rgba(0, 0, 0, 0.05);
+    }
   }
 
   .header {
@@ -207,10 +213,17 @@ $retina: (
   }
 
   &.multiline {
-    // height: zoomed(100px);
-    min-height: zoomed(100px);
-    overflow-y: scroll;
+    height: zoomed(116px);
+    overflow-y: auto;
     white-space: pre-wrap;
+    overflow-wrap: break-word;
+    padding: zoomed(8px) zoomed(16px);
+    margin: zoomed(-8px) zoomed(-16px);
+
+    &.expanded {
+      min-height: zoomed(116px);
+      height: auto;
+    }
   }
 
   &.variable {
